tests/specs/test/no_check/main.out
Uncaught error from ./main.ts FAILED

 ERRORS 

./main.ts (uncaught error)
error: (in promise) TypeError: Cannot read properties of undefined (reading 'fn')
Deno.test();
     ^
    at [WILDCARD]
This error was not caught from a test and caused the test runner to fail on the referenced module.
It most likely originated from a dangling promise, event/timeout handler or top-level code.

 FAILURES 

./main.ts (uncaught error)

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
